--- a/0.2_NN2.ipynb
+++ b/0.2_NN2.ipynb
@@ -351,36 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "RuntimeError",
-     "evalue": "you can only change requires_grad flags of leaf variables.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[44], line 6\u001b[0m\n\u001b[0;32m      3\u001b[0m predicted \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor([\u001b[38;5;241m1.\u001b[39m, \u001b[38;5;241m3.\u001b[39m], requires_grad\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m      5\u001b[0m x \u001b[38;5;241m=\u001b[39m (result \u001b[38;5;241m+\u001b[39m predicted)\u001b[38;5;241m.\u001b[39msum(dtype\u001b[38;5;241m=\u001b[39mtorch\u001b[38;5;241m.\u001b[39mfloat32)\n\u001b[1;32m----> 6\u001b[0m \u001b[43mx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrequires_grad\u001b[49m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[0;32m      7\u001b[0m x\u001b[38;5;241m.\u001b[39mbackward()\n\u001b[0;32m      9\u001b[0m result\u001b[38;5;241m.\u001b[39mgrad, predicted\u001b[38;5;241m.\u001b[39mgrad\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: you can only change requires_grad flags of leaf variables."
-     ]
-    }
-   ],
-   "source": [
-    "import torch\n",
-    "result = torch.tensor([1., 2.], requires_grad=True)\n",
-    "predicted = torch.tensor([1., 3.], requires_grad=True)\n",
-    "\n",
-    "x = (result + predicted).sum(dtype=torch.float32)\n",
-    "x.requires_grad = True\n",
-    "x.backward()\n",
-    "\n",
-    "result.grad, predicted.grad"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -414,20 +385,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PyTorch was smart enough to blow up and prevent us from going backward again with the following message:\n",
+      "Trying to backward through the graph a second time (or directly access saved tensors after they have already been freed). Saved intermediate values of the graph are freed when you call .backward() or autograd.grad(). Specify retain_graph=True if you need to backward through the graph a second time or if you need to access saved tensors after calling backward.\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
     "# PyTorch is smart enough to warn us if we try to use backward again\n",
     "\n",
     "try:\n",
     "    some_output.backward()\n",
     "except RuntimeError as e:\n",
-    "    print(f\"PyTorch was smart enough to blow up and prevent us from going backward again with the following message:\\n{str(e)}\")\n",
-    "\n",
-    "# %%\n",
-    "\n",
+    "    print(f\"PyTorch was smart enough to blow up and prevent us from going backward again with the following message:\\n{str(e)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "some_input.grad=tensor([15.])\n"
+     ]
+    }
+   ],
+   "source": [
     "# But PyTorch doesn't warn us if we create a new output that reuses `some_input`\n",
     "# and instead will just keep adding more gradients to the pre-existing gradient.\n",
     "# This is known as \"accumulating gradients,\" and there are reasons you might\n",
@@ -442,10 +434,15 @@
     "# correct derivative for y = 10 * x or y = 5 * x!\n",
     "assert some_input.grad == 15\n",
     "\n",
-    "print(f\"{some_input.grad=}\")\n",
-    "\n",
-    "# %%\n",
-    "\n",
+    "print(f\"{some_input.grad=}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Because PyTorch will either throw an error on a given backwards call, or it'll\n",
     "# accumulate gradients when you potentially don't want that to happen, we\n",
     "# generally will want to reset gradients between calls to backward(). The\n",
@@ -459,10 +456,24 @@
     "yet_another_output.backward()\n",
     "\n",
     "# This time we get the correct gradient!\n",
-    "assert some_input.grad == 5\n",
-    "\n",
-    "# %%\n",
-    "\n",
+    "assert some_input.grad == 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yep we still get the following error message:\n",
+      "Trying to backward through the graph a second time (or directly access saved tensors after they have already been freed). Saved intermediate values of the graph are freed when you call .backward() or autograd.grad(). Specify retain_graph=True if you need to backward through the graph a second time or if you need to access saved tensors after calling backward.\n"
+     ]
+    }
+   ],
+   "source": [
     "# Note that even after resetting a gradient, we still can't call backward again\n",
     "# on the same output. This has to do with the details of how PyTorch\n",
     "# automatically calculates derivatives. The exact details of why this is the\n",
@@ -475,10 +486,42 @@
     "try:\n",
     "    yet_another_output.backward()\n",
     "except RuntimeError as e:\n",
-    "    print(f\"Yep we still get the following error message:\\n{str(e)}\")\n",
-    "\n",
-    "# %%\n",
-    "\n",
+    "    print(f\"Yep we still get the following error message:\\n{str(e)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$f(x_i, y_i) = \\sum_{0 <= i < 1000} x_i^2 + y_i^2$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x_squared_plus_y_squared_plus_5_thousand_times()=(array([[0.41667432, 0.8188815 ],\n",
+      "       [0.9013257 , 0.00917137],\n",
+      "       [0.52781105, 0.34663177],\n",
+      "       ...,\n",
+      "       [0.49916118, 0.9296028 ],\n",
+      "       [0.27324748, 0.19123346],\n",
+      "       [0.07017344, 0.8141302 ]], dtype=float32), array([[0.83334863, 1.637763  ],\n",
+      "       [1.8026514 , 0.01834273],\n",
+      "       [1.0556221 , 0.69326353],\n",
+      "       ...,\n",
+      "       [0.99832237, 1.8592056 ],\n",
+      "       [0.54649496, 0.3824669 ],\n",
+      "       [0.14034688, 1.6282604 ]], dtype=float32))\n"
+     ]
+    }
+   ],
+   "source": [
     "# Let's drive home the notion that PyTorch's autodifferentiation handles\n",
     "# multidimensional tensors just fine, since this will often show up. We'll have\n",
     "# PyTorch calculate 2000 derivatives at once (i.e. calculate a single gradient\n",
@@ -512,13 +555,19 @@
     "    on a tensor.\n",
     "    \"\"\"\n",
     "    points = generate_one_thousand_points()\n",
-    "    # TODO: Implement this\n",
-    "    raise NotImplementedError()\n",
+    "    x = points.pow(2).sum()\n",
+    "    x.backward()\n",
+    "    return points.detach().numpy(), points.grad.detach().numpy()\n",
     "\n",
-    "print(f\"{x_squared_plus_y_squared_plus_5_thousand_times()=}\")\n",
-    "\n",
-    "\n",
-    "# %%\n",
+    "print(f\"{x_squared_plus_y_squared_plus_5_thousand_times()=}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import einops\n",
     "\n",
     "# Recall that a higher-level way of thinking about a neural layer net is that it\n",
@@ -539,8 +588,11 @@
     "    linear_function: Float[t.Tensor, \"d_output d_input\"],\n",
     "    input_to_function: Float[t.Tensor, \"batch d_input\"],\n",
     ") -> Float[t.Tensor, \"batch d_output\"]:\n",
-    "    # TODO: Implement this\n",
-    "    raise NotImplementedError()\n",
+    "\n",
+    "\n",
+    "    # return input_to_function @ linear_function.T\n",
+    "    # return torch.matmul(input_to_function, linear_function.T)\n",
+    "    return einops.einsum(linear_function, input_to_function, \"d_output d_input, batch d_input -> batch d_output\")\n",
     "\n",
     "# 3x2 matrix, i.e. f: R^2 -> R^3\n",
     "test_linear_function = t.tensor(\n",
@@ -572,19 +624,36 @@
     "assert_tensors_within_epsilon(\n",
     "    expected=expected_output,\n",
     "    actual=test_output,\n",
-    ")\n",
-    "\n",
-    "# %%\n",
-    "\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "example_input.grad=tensor([[24.3369, 28.2497]])\n"
+     ]
+    }
+   ],
+   "source": [
     "# And as we expect, gradients flow through automatically.\n",
     "example_input = t.rand((1, 2), requires_grad=True)\n",
     "example_result = apply_linear_function_to_input(example_input, t.rand((50, 2))).sum()\n",
     "example_result.backward()\n",
-    "print(f\"{example_input.grad=}\")\n",
-    "\n",
-    "\n",
-    "# %%\n",
-    "\n",
+    "print(f\"{example_input.grad=}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Putting this together, we can create a three layer neural net consisting of\n",
     "# six tensors, instead of needing to create each neuron individually.\n",
     "\n",
@@ -644,10 +713,10 @@
     "            layer_0 = t.zeros((2000, 784), requires_grad=True).uniform_(-initial_bound, initial_bound),\n",
     "            layer_0_bias = t.zeros(2000, requires_grad=True).uniform_(-initial_bound, initial_bound),\n",
     "            # TODO: Finish implementing \n",
-    "            layer_1 = None,\n",
-    "            layer_1_bias = None,\n",
-    "            layer_2 = None,\n",
-    "            layer_2_bias = None,\n",
+    "            layer_1 = t.zeros((400, 2000), requires_grad=True).uniform_(-initial_bound, initial_bound),\n",
+    "            layer_1_bias = t.zeros(400, requires_grad=True).uniform_(-initial_bound, initial_bound),\n",
+    "            layer_2 = t.zeros((10, 400), requires_grad=True).uniform_(-initial_bound, initial_bound),\n",
+    "            layer_2_bias = t.zeros(10, requires_grad=True).uniform_(-initial_bound, initial_bound),\n",
     "        )\n",
     "        return neural_net\n",
     "\n",
@@ -661,15 +730,19 @@
     "assert_with_expect(\n",
     "    expected=(10, 400),\n",
     "    actual=new_neural_net.layer_2.shape,\n",
-    ")\n",
-    "\n",
-    "# %%\n",
-    "\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# We'll need a version of ReLU that works with tensors of arbitrary size. Let's implement that:\n",
     "\n",
     "def tensor_relu(input_tensor: t.Tensor) -> t.Tensor:\n",
-    "    # TODO: Implement this\n",
-    "    raise NotImplementedError()\n",
+    "    return t.max(t.zeros_like(input_tensor), input_tensor)\n",
     "\n",
     "test_input = t.tensor([\n",
     "    [1.0, 2.0, -3.0],\n",
@@ -681,9 +754,15 @@
     "        [4.0, 0.0, 6.0],\n",
     "    ]),\n",
     "    actual=tensor_relu(test_input)\n",
-    ")\n",
-    "\n",
-    "\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Now let's define a version of `forward` that works with tensors. Again, our\n",
     "# input tensor is a whole batch of inputs, not just a single input!\n",
     "#\n",
@@ -696,20 +775,57 @@
     "\n",
     "def forward(x: Float[t.Tensor, \"batch d_input\"], neural_net: ThreeLayerNeuralNet) -> Float[t.Tensor, \"batch d_output\"]:\n",
     "    # TODO: Fill in the first two layers of this!\n",
-    "    after_layer_0 = None\n",
-    "    after_layer_1 = None\n",
+    "    after_layer_0 = tensor_relu(apply_linear_function_to_input(neural_net.layer_0, x) + neural_net.layer_0_bias)\n",
+    "    after_layer_1 = tensor_relu(apply_linear_function_to_input(neural_net.layer_1, after_layer_0) + neural_net.layer_1_bias)\n",
     "    # Instead of doing a ReLU at the very end, we're going to use softmax\n",
     "    after_layer_2 = t.nn.functional.softmax(apply_linear_function_to_input(neural_net.layer_2, after_layer_1) + neural_net.layer_2_bias, dim=-1)\n",
-    "    return after_layer_2\n",
-    "\n",
-    "# %%\n",
-    "\n",
+    "    return after_layer_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "example_output=tensor([[0.0768, 0.0830, 0.0807, 0.1035, 0.0936, 0.0717, 0.1589, 0.0877, 0.0868,\n",
+      "         0.1574],\n",
+      "        [0.0768, 0.0830, 0.0807, 0.1035, 0.0936, 0.0717, 0.1589, 0.0877, 0.0868,\n",
+      "         0.1574],\n",
+      "        [0.0768, 0.0830, 0.0807, 0.1035, 0.0936, 0.0717, 0.1589, 0.0877, 0.0868,\n",
+      "         0.1574],\n",
+      "        [0.0768, 0.0830, 0.0807, 0.1035, 0.0936, 0.0717, 0.1589, 0.0877, 0.0868,\n",
+      "         0.1574],\n",
+      "        [0.0768, 0.0830, 0.0807, 0.1035, 0.0936, 0.0717, 0.1589, 0.0877, 0.0868,\n",
+      "         0.1574],\n",
+      "        [0.0768, 0.0830, 0.0807, 0.1035, 0.0936, 0.0717, 0.1589, 0.0877, 0.0868,\n",
+      "         0.1574],\n",
+      "        [0.0768, 0.0830, 0.0807, 0.1035, 0.0936, 0.0717, 0.1589, 0.0877, 0.0868,\n",
+      "         0.1574],\n",
+      "        [0.0768, 0.0830, 0.0807, 0.1035, 0.0936, 0.0717, 0.1589, 0.0877, 0.0868,\n",
+      "         0.1574],\n",
+      "        [0.0768, 0.0830, 0.0807, 0.1035, 0.0936, 0.0717, 0.1589, 0.0877, 0.0868,\n",
+      "         0.1574],\n",
+      "        [0.0768, 0.0830, 0.0807, 0.1035, 0.0936, 0.0717, 0.1589, 0.0877, 0.0868,\n",
+      "         0.1574]], grad_fn=<SoftmaxBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
     "example_output = forward(neural_net=new_neural_net, x=t.ones((10, 784)))\n",
     "\n",
-    "print(f\"{example_output=}\")\n",
-    "\n",
-    "# %%\n",
-    "\n",
+    "print(f\"{example_output=}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Note that generally speaking we'll mainly be using scalar (i.e. 0-dimensional\n",
     "# tensor) outputs that we call .backward() on. This is not too much of a\n",
     "# limitation because almost always a loss function will output a scalar. There\n",
